--- a/public/scss_convert/broccoli_style.css
+++ b/public/scss_convert/broccoli_style.css
@@ -2108,4 +2108,36 @@ section {
 }
 .l-header-2_thumbNail {
   width: var(--spacing-80);
-}/*# sourceMappingURL=headers.css.map */
+}
+
+.c-breadcrumbs {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.c-breadcrumbs_prePage {
+  margin: var(--spacing-12);
+  color: var(--color-black);
+  font-size: var(--text-2xl);
+}
+.c-breadcrumbs_currentPage {
+  color: #4C2A70;
+  font-size: var(--text-3xl);
+}
+
+.c-sideNav {
+  color: var(--color-white);
+}
+.c-sideNav hr {
+  opacity: 1;
+  background-color: var(--color-white);
+  height: var(--spacing-2);
+}
+.c-sideNav_selections_locations, .c-sideNav_selections_topics {
+  padding: var(--spacing-24);
+  background-color: #4C2A70;
+  border-radius: var(--spacing-32);
+  margin: var(--spacing-24);
+  text-align: center;
+  font-size: var(--text-3xl);
+}/*# sourceMappingURL=broccoli_style.css.map */
