--- a/public/scss/utility/broccoli_variables.scss
+++ b/public/scss/utility/broccoli_variables.scss
@@ -44,7 +44,8 @@ $spacing-map: (160: 24vw, 120: 20vw, 100: 18vw, 88: 17vw, 80: 16vw, 72: 15vw, 64
   --text-md: 1.8rem;
   --text-body: 1.6rem;
   --text-sm: 1.4rem;
-  --text-xs: 1.2rem;
+  --text-xs: 1rem;
+  --text-xxs: 0.8rem;
   
   @include media(sm) {
     --text-4xl: 3.6rem;
