--- a/public/scss_convert/broccoli_style.css
+++ b/public/scss_convert/broccoli_style.css
@@ -33,7 +33,8 @@
   --text-md: 1.8rem;
   --text-body: 1.6rem;
   --text-sm: 1.4rem;
-  --text-xs: 1.2rem;
+  --text-xs: 1rem;
+  --text-xxs: 0.8rem;
   --color-primary: #EA5514;
   --color-primary-rgb: 242, 109, 51;
   --color-primary-80: rgba(var(--color-primary-rgb), 0.8);
@@ -355,7 +356,8 @@ section {
   --text-md: 1.8rem;
   --text-body: 1.6rem;
   --text-sm: 1.4rem;
-  --text-xs: 1.2rem;
+  --text-xs: 1rem;
+  --text-xxs: 0.8rem;
   --color-primary: #EA5514;
   --color-primary-rgb: 242, 109, 51;
   --color-primary-80: rgba(var(--color-primary-rgb), 0.8);
@@ -1960,7 +1962,8 @@ section {
   --text-md: 1.8rem;
   --text-body: 1.6rem;
   --text-sm: 1.4rem;
-  --text-xs: 1.2rem;
+  --text-xs: 1rem;
+  --text-xxs: 0.8rem;
   --color-primary: #EA5514;
   --color-primary-rgb: 242, 109, 51;
   --color-primary-80: rgba(var(--color-primary-rgb), 0.8);
@@ -2053,6 +2056,8 @@ section {
 }
 
 .l-header {
+  z-index: 2;
+  width: 100%;
   position: fixed;
   display: flex;
   flex-direction: row;
@@ -2073,6 +2078,11 @@ section {
   align-self: center;
   font-size: var(--text-xl);
   font-weight: 600;
+}
+.l-header_li a {
+  all: unset;
+  cursor: pointer;
+  color: var(--color-white);
 }
 .l-header_li:last-child {
   padding: 0;
@@ -2103,11 +2113,127 @@ section {
   font-size: var(--text-xl);
   font-weight: 600;
 }
+.l-header-2_li a {
+  all: unset;
+  cursor: pointer;
+  color: var(--color-white);
+}
 .l-header-2_li:last-child {
   padding: 0;
 }
 .l-header-2_thumbNail {
   width: var(--spacing-80);
+}
+
+.l-footer {
+  background-color: var(--color-black);
+  padding: var(--spacing-32);
+  color: var(--color-white);
+}
+.l-footer_brand {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-right: solid var(--spacing-2) var(--color-white);
+}
+.l-footer_brand img {
+  width: 60%;
+  margin-bottom: var(--spacing-32);
+}
+.l-footer_brand p {
+  font-size: var(--text-xxs);
+}
+.l-footer_siteMap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: start;
+}
+.l-footer_siteMap_topic h6 {
+  font-size: var(--text-md);
+  margin-bottom: var(--spacing-24);
+}
+.l-footer_siteMap_topic div {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+}
+.l-footer_siteMap_topic div a {
+  font-size: var(--text-sm);
+  margin-bottom: var(--spacing-24);
+}
+
+.l-seniorPage {
+  display: grid;
+  grid-template-columns: repeat(20, 1fr);
+}
+.l-seniorPage_sideNav {
+  grid-column: 1/9;
+  grid-row: 1/2;
+}
+.l-seniorPage_content {
+  grid-column: 6/21;
+  grid-row: 1/2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+@keyframes change {
+  from {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+.l-innerHeader {
+  z-index: -1;
+  background-color: var(--color-black);
+  aspect-ratio: 16/8.5;
+  overflow-y: hidden;
+}
+.l-innerHeader_headerCard {
+  display: grid;
+  grid-template-rows: repeat(12, auto);
+  grid-template-columns: repeat(12, auto);
+}
+.l-innerHeader_headerCard_banner {
+  grid-row: 1/13;
+  grid-column: 1/13;
+}
+.l-innerHeader_headerCard_banner span {
+  display: block;
+  width: 100vw !important;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  aspect-ratio: 16/9;
+  filter: opacity(0.6);
+}
+.l-innerHeader_headerCard_slogan {
+  grid-row: 7/9;
+  grid-column: 2/6;
+  text-align: left;
+  z-index: 2;
+}
+.l-innerHeader_headerCard_slogan h1 {
+  font-size: 4vw;
+}
+.l-innerHeader_headerCard_slogan #topic {
+  animation: change 1s forwards;
+}
+.l-innerHeader_headerCard svg {
+  grid-row: 1/13;
+  grid-column: 1/13;
+  z-index: 1;
+}
+.l-innerHeader_headerCard svg polygon {
+  fill: #4C2A70;
 }
 
 .c-breadcrumbs {
@@ -2127,17 +2253,148 @@ section {
 
 .c-sideNav {
   color: var(--color-white);
+  display: grid;
+  grid-template-columns: repeat(20, 1fr);
+}
+.c-sideNav_selections {
+  grid-column: 1/12;
+  grid-row: 1/2;
+}
+.c-sideNav_selections_locations, .c-sideNav_selections_topics {
+  padding: var(--spacing-24);
+  background-color: #4C2A70;
+  border-radius: var(--spacing-24);
+  margin: var(--spacing-24);
+  text-align: center;
+  font-size: var(--text-3xl);
+}
+.c-sideNav_selections_locations button, .c-sideNav_selections_topics button {
+  padding: var(--spacing-12);
+}
+.c-sideNav_area {
+  z-index: 2;
+  grid-column: 10/21;
+  grid-row: 1/2;
+  display: grid;
+  grid-template-rows: repeat(20, 1fr);
+}
+.c-sideNav_area_english {
+  display: none;
+  grid-row: 1/21;
+  grid-column: 1/2;
+  transform-origin: 0% 0%;
+  transform: scale(0.8);
+}
+.c-sideNav_area_eurp {
+  display: none;
+  grid-row: 3/21;
+  grid-column: 1/2;
+  transform-origin: 0% 0%;
+  transform: scale(0.8);
+}
+.c-sideNav_area_asia {
+  display: none;
+  grid-row: 5/21;
+  grid-column: 1/2;
+  transform-origin: 0% 0%;
+  transform: scale(0.8);
 }
 .c-sideNav hr {
   opacity: 1;
   background-color: var(--color-white);
   height: var(--spacing-2);
 }
-.c-sideNav_selections_locations, .c-sideNav_selections_topics {
-  padding: var(--spacing-24);
-  background-color: #4C2A70;
-  border-radius: var(--spacing-32);
-  margin: var(--spacing-24);
+
+.c-studentCard {
+  border: solid #4C2A70 var(--spacing-4);
+  border-radius: var(--spacing-24) var(--spacing-24) 0 0;
+  padding: 0;
+  max-width: 30rem;
+  max-height: 40rem;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr;
+  transform: scale(0.9);
+}
+.c-studentCard_studentImg {
+  grid-column: 1/13;
+  grid-row: 3/10;
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  aspect-ratio: 1/1;
+  margin: var(--spacing-8);
+  border: solid #BD9EBE var(--spacing-4);
+}
+.c-studentCard_bg {
+  grid-column: 1/13;
+  grid-row: 4/21;
+  align-self: flex-end;
+}
+.c-studentCard_bg polygon {
+  fill: #BD9EBE;
+}
+.c-studentCard_schoolImg {
+  grid-column: 2/5;
+  grid-row: 13/16;
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  aspect-ratio: 1/1;
+}
+.c-studentCard_userName {
+  grid-column: 1/9;
+  grid-row: 1/5;
+  color: #4C2A70;
+  font-weight: 800;
+  font-size: var(--text-md);
+  padding: var(--spacing-8);
+}
+.c-studentCard_schoolEnglish {
+  grid-column: 6/13;
+  grid-row: 16/20;
+  color: var(--color-white);
+  font-size: var(--text-xl);
+}
+.c-studentCard_schoolChinese {
+  grid-column: 5/13;
+  grid-row: 1/3;
+  text-align: end;
+  font-size: var(--text-sm);
+  padding: var(--spacing-8);
+}
+.c-studentCard_react {
+  grid-column: 1/5;
+  grid-row: 20/21;
+  font-size: var(--text-xl);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.c-studentCard_react i {
+  display: flex;
+  flex-direction: row;
+}
+.c-studentCard_react i span {
+  all: unset;
+  font-size: var(--text-sm);
+  text-decoration: none;
+}
+.c-studentCard_postTag {
+  grid-column: 10/13;
+  grid-row: 11/15;
+  display: flex;
+  flex-direction: column;
+}
+.c-studentCard_postTag a {
   text-align: center;
-  font-size: var(--text-3xl);
+  display: block;
+  background-color: #4C2A70;
+  border-radius: var(--spacing-4);
+  color: var(--color-white);
+  font-size: var(--text-xs);
+  padding: var(--spacing-2);
+  margin: var(--spacing-4);
 }/*# sourceMappingURL=broccoli_style.css.map */
