--- a/public/scss/broccoli_style.scss
+++ b/public/scss/broccoli_style.scss
@@ -4,13 +4,21 @@
 @import 'utility/broccoli_mixins';
 @import 'utility/broccoli_utility';
 @import 'utility/broccoli_variables';
+@import 'utility/broccoli_custom_mixin';
 // header & footer
 @import 'layout/headers.scss';
 @import 'layout/footer.scss';
 // layouts
 @import 'layout/seniorPage_layout.scss';
 @import 'layout/welcomePage_layout.scss';
+@import 'layout/university_layout.scss';
 // components
 @import 'component/breadcrumbs.scss';
 @import 'component/sideNav.scss';
 @import 'component/studentCard.scss';
+@import 'component/uniCard.scss';
+@import 'component/qaCard.scss';
+@import 'component/newsCard.scss';
+// objects
+@import 'object/btns.scss';
+@import 'object/swiperCustom.scss';
