--- a/public/scss/component/studentCard.scss
+++ b/public/scss/component/studentCard.scss
@@ -1,94 +1,27 @@
-@mixin imgBackground{
-    display: block;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    aspect-ratio: 1/1;
-}
-
+// for senior page and etc
 .c-studentCard{
-    border: solid $prime_purple var(--spacing-4);
-    border-radius: var(--spacing-24) var(--spacing-24) 0 0;
-    padding: 0;
     max-width: 30rem;
     max-height: 40rem;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto 1fr;
-    transform: scale(0.9);
-    &_studentImg{
-        grid-column: 1/13;
-        grid-row: 3/10;
-        @include imgBackground;
-        margin: var(--spacing-8);
-        border: solid $prime_purple_light var(--spacing-4);
-    }
-    &_bg{
-        grid-column: 1/13;
-        grid-row: 4/21;
-        align-self: flex-end;
-        polygon{
-            fill: $prime_purple_light;
-        }
-    }
-    &_schoolImg{
-        grid-column: 2/5;
-        grid-row: 13/16;
-        @include imgBackground;
-    }
-    &_userName{
-        grid-column: 1/9;
-        grid-row: 1/5;
-        color: $prime_purple;
-        font-weight: 800;
-        font-size: var(--text-md);
-        padding: var(--spacing-8);
-    }
-    &_schoolEnglish{
-        grid-column: 6/13;
-        grid-row: 16/20;
-        color: var(--color-white);
-        font-size: var(--text-xl);
-    }
-    &_schoolChinese{
-        grid-column: 5/13;
-        grid-row: 1/3;
-        text-align: end;
-        font-size: var(--text-sm);
-        padding: var(--spacing-8);
-    }
-    &_react{
-        grid-column: 1/5;
-        grid-row: 20/21;
-        font-size: var(--text-xl);
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        i{
-            display: flex;
-            flex-direction: row;
-            span{
-                all: unset;
-                font-size: var(--text-sm);
-                text-decoration: none;
-            }
-        }
-    }
-    &_postTag{
-        grid-column: 10/13;
-        grid-row: 11/15;
-        display: flex;
-        flex-direction: column;
-        a{
-            text-align: center;
-            display: block;
-            background-color: $prime_purple;
-            border-radius: var(--spacing-4);
-            color: var(--color-white);
-            font-size: var(--text-xs);
-            padding: var(--spacing-2);
-            margin: var(--spacing-4);
-            
-        }
-    }
+    aspect-ratio: 3/4;
+    @include studentCardSetting(
+    solid var(--spacing-4) $prime_purple , //card border
+    solid var(--spacing-2) $prime_purple_light, //student img border
+    var(--text-xl), //user name font
+    var(--text-xl), //school english font
+    var(--text-lg), //school chinese font
+    var(--text-lg), //react font
+    var(--text-sm)); //post font
+}
+
+// for swiper carousel
+.c-studentCardSwiper{
+    aspect-ratio: 3/4;
+    @include studentCardSetting(
+    solid var(--spacing-2) $prime_purple , //card border
+    solid var(--spacing-2) $prime_purple_light, //student img border
+    var(--text-sm), //user name font
+    var(--text-md), //school english font
+    var(--text-sm), //school chinese font
+    var(--text-md), //react font
+    var(--text-xxs)); //post font
 }
