--- a/public/scss/broccoli_style.scss
+++ b/public/scss/broccoli_style.scss
@@ -12,6 +12,9 @@
 @import 'layout/seniorPage_layout.scss';
 @import 'layout/welcomePage_layout.scss';
 @import 'layout/university_layout.scss';
+@import 'layout/singleArticle.scss';
+@import 'layout/introduction.scss';
+@import 'layout/aboutUs.scss';
 // components
 @import 'component/breadcrumbs.scss';
 @import 'component/sideNav.scss';
@@ -19,6 +22,13 @@
 @import 'component/uniCard.scss';
 @import 'component/qaCard.scss';
 @import 'component/newsCard.scss';
+@import 'component/articleCard.scss';
+@import 'component/callAction';
+@import 'component/pagination.scss';
+@import 'component/aboutCarousel.scss';
 // objects
 @import 'object/btns.scss';
-@import 'object/swiperCustom.scss';
+@import 'object/searchBar.scss';
+@import 'object/titles.scss';
+// states
+@import 'state/swiperCustom.scss';
