--- a/public/scss/utility/broccoli_custom_mixin.scss
+++ b/public/scss/utility/broccoli_custom_mixin.scss
@@ -105,6 +105,7 @@
         grid-row: 10/13;
         display: flex;
         flex-direction: column;
+        color: var(--color-white);
         a{
             text-align: center;
             display: block;
@@ -125,7 +126,7 @@
     padding: var(--spacing-4);
     background-color: $prime_purple;
     font-size: var(--text-sm);
-    border-radius: var(--spacing-16);
+    border-radius: var(--spacing-8);
     color: var(--color-white);
     width: fit-content;
 }
