add about-us & FAQ page, fix contract pages

--- a/public/scss/broccoli_style.scss
+++ b/public/scss/broccoli_style.scss
@@ -15,6 +15,9 @@
 @import 'layout/singleArticle.scss';
 @import 'layout/introduction.scss';
 @import 'layout/aboutUs.scss';
+@import 'layout/yizixueFAQ.scss';
+@import 'layout/contract.scss';
+@import 'layout/login.scss';
 // components
 @import 'component/breadcrumbs.scss';
 @import 'component/sideNav.scss';
