--- a/public/scss/layout/aboutUs.scss
+++ b/public/scss/layout/aboutUs.scss
@@ -14,6 +14,6 @@
     }
     &__teamSwiper{
         background-color: var(--color-white);
-        margin: var(--spacing-24);
+        margin: var(--spacing-24) var(--spacing-160);
     }
 }
