--- a/public/scss/object/btns.scss
+++ b/public/scss/object/btns.scss
@@ -101,3 +101,55 @@
     color: $prime_purple;
     font-weight: 800;
 }
+
+.o-faqTopic{
+    all: unset;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    padding: var(--spacing-4);
+    border: solid var(--color-black) 1px;
+    border-radius: var(--spacing-8);
+    text-align: center;
+    font-size: var(--text-lg);
+    font-weight: 800;
+    &:hover{
+        background-color: $prime_purple;
+        color: var(--color-white);
+    }
+    &:active{
+        background-color: var(--color-white);
+        color: $prime_purple_light;
+    }
+    &__selected{
+        background-color: $prime_gray;
+        color: var(--color-black);
+    }
+}
+
+.o-faqBtn{
+    all: unset;
+    display: block;
+    width: 100%;
+    span{
+        background-color: $prime_purple_light;
+        border-radius: var(--spacing-4);
+        border: solid var(--color-black) 1px;
+        svg{
+            display: inline;
+            width: var(--text-4xl);
+            circle{
+                fill: $prime_purple;
+            }
+            path{
+                fill: $prime_purple_light;
+            }
+        }
+        p{
+            font-size: var(--text-lg);
+            color: var(--color-white);
+            text-align: center;
+            font-weight: 800;
+        }
+    }
+}
