--- a/public/scss/state/swiperCustom.scss
+++ b/public/scss/state/swiperCustom.scss
@@ -3,16 +3,19 @@
         width: 100%;
         height: 100%;
     }
+    div.swiper.studentSwiper{
+        transform: scale(0.9);
+    }
+
     div.swiper.schoolSwiper{
         background-color: $prime_purple_bright;
         border-radius: var(--spacing-24);
-        .c-uniCard{
+        .swiper-slide{
             transform: scale(0.75);
         }
-    }
-
-    div.c-uniCard.swiper-slide.swiper-slide-active{
-        transform: scale(0.9);
+        .swiper-slide.swiper-slide-active{
+            transform: scale(0.9);
+        }
     }
 
     // pagnation
