--- a/public/scss/broccoli_style.scss
+++ b/public/scss/broccoli_style.scss
@@ -19,6 +19,8 @@
 @import 'layout/contract.scss';
 @import 'layout/login.scss';
 @import 'layout/qnaGuest.scss';
+@import 'layout/articleList.scss';
+@import 'layout/qnaIndex';
 // components
 @import 'component/breadcrumbs.scss';
 @import 'component/sideNav.scss';
