--- a/public/scss/layout/headers.scss
+++ b/public/scss/layout/headers.scss
@@ -6,6 +6,8 @@
     justify-content: space-between;
     padding: var(--spacing-12);
     background-color: $color;
+    z-index: 10;
+    
 
     &__hidePhone {
         display: none;
