--- a/public/scss/component/breadcrumbs.scss
+++ b/public/scss/component/breadcrumbs.scss
@@ -3,12 +3,12 @@
     flex-direction: column;
     align-items: start;
     padding: 0 var(--spacing-24);
-    &_prePage{
+    &__prePage{
         margin: var(--spacing-12);
         color: var(--color-black);
         font-size: var(--text-2xl);
     }
-    &_currentPage{
+    &__currentPage{
         color: $prime_purple;
         font-size: var(--text-4xl);
         letter-spacing: var(--spacing-4);
