--- a/public/scss/object/titles.scss
+++ b/public/scss/object/titles.scss
@@ -13,6 +13,16 @@
         color: $prime_purple;
 }
 
+.o-whiteTitle{
+        font-size: var(--text-3xl);
+        color: var(--color-white);
+}
+
+.o-smallWhiteTitle{
+        font-size: var(--text-xl);
+        color: var(--color-white);
+}
+
 .o-articleTitle{
         font-size: var(--text-2xl);
         color: $prime_purple;
