--- a/public/scss_convert/broccoli_style.css
+++ b/public/scss_convert/broccoli_style.css
@@ -2053,6 +2053,7 @@ section {
   justify-content: space-between;
   padding: var(--spacing-12);
   background-color: rgba(255, 255, 255, 0);
+  z-index: 10;
 }
 .l-header__hidePhone {
   display: none;
@@ -2098,6 +2099,7 @@ section {
   justify-content: space-between;
   padding: var(--spacing-12);
   background-color: var(--color-black);
+  z-index: 10;
 }
 .l-header-2__hidePhone {
   display: none;
@@ -2224,7 +2226,7 @@ section {
   margin-left: calc(-1 * var(--spacing-80));
 }
 .l-seniorPage .c-studentCard_schoolEnglish {
-  font-size: var(--text-lg);
+  font-size: var(--text-md);
 }
 .l-seniorPage hr {
   height: var(--spacing-2);
@@ -2509,6 +2511,9 @@ section {
   border-radius: var(--spacing-12) 0 0 var(--spacing-12);
   padding: var(--spacing-24);
 }
+.l-introduction__tags .o-skillBtn {
+  font-size: var(--text-md);
+}
 .l-introduction__schoolRelate {
   display: flex;
   flex-direction: column;
@@ -2543,7 +2548,6 @@ section {
 }
 .l-introduction__detailSection {
   background-color: #d7d7d7;
-  padding: var(--spacing-80) var(--spacing-160) var(--spacing-80) var(--spacing-160);
 }
 .l-introduction__detailContent {
   background-color: var(--color-white);
@@ -2559,27 +2563,20 @@ section {
   text-align: end;
   padding: var(--spacing-12);
   border-radius: 0 var(--spacing-12) var(--spacing-12) 0;
-  margin-bottom: calc(-1 * var(--spacing-32));
+  margin-top: calc(-1 * var(--spacing-24));
+  margin-bottom: var(--spacing-24);
   z-index: 2;
 }
 .l-introduction__myArticle {
   background-color: #d7d7d7;
   border-radius: var(--spacing-24);
-  margin: var(--spacing-32) var(--spacing-80) var(--spacing-32) var(--spacing-80);
+  margin-top: calc(-1 * var(--spacing-64));
 }
-.l-introduction__moreArticle {
-  transform: scale(0.8);
-}
-.l-introduction__moreArticle .container {
-  min-height: 25rem;
+.l-introduction__articleCard {
   background-color: var(--color-white);
-}
-.l-introduction__moreArticle .c-articleCard__content {
-  font-size: var(--text-sm);
 }
 .l-introduction__reference {
   margin-top: var(--spacing-32);
-  padding: var(--spacing-12);
 }
 
 .l-aboutUs__aboutSwiper {
@@ -2606,6 +2603,16 @@ section {
 }
 .l-yizixueFAQ__content {
   background-color: var(--color-white);
+  padding-bottom: var(--spacing-80);
+}
+.l-yizixueFAQ__content .nav-link {
+  display: block;
+  border: solid var(--color-black) 1px;
+  border-radius: var(--spacing-8);
+}
+.l-yizixueFAQ__content .nav-link.active {
+  background-color: #C1C1C1;
+  color: var(--color-black);
 }
 
 .l-contract {
@@ -2702,18 +2709,87 @@ section {
   padding: var(--spacing-12);
 }
 
+.l-articleList__authorCard {
+  border: solid var(--spacing-8) #BD9EBE;
+  border-radius: var(--spacing-32);
+  overflow: hidden;
+}
+.l-articleList__authorCard .o-whiteBtn {
+  padding: var(--spacing-8);
+  font-size: var(--text-sm);
+  border-radius: var(--spacing-8);
+  margin: var(--spacing-2);
+}
+.l-articleList__authorInfo {
+  overflow: hidden;
+  background-color: #BD9EBE;
+  border-radius: var(--spacing-24);
+  margin-right: calc(-1 * var(--spacing-32));
+}
+.l-articleList__authorInfo .o-whiteTitle {
+  font-size: var(--text-4xl);
+}
+.l-articleList__authorInfo .o-tag {
+  font-size: var(--text-lg);
+}
+.l-articleList__authorImg {
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  aspect-ratio: 1/1;
+}
+.l-articleList__schoolImg {
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  aspect-ratio: 1/1;
+}
+.l-articleList__schoolNames {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.l-articleList__skills {
+  margin-left: var(--spacing-32);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.l-articleList__card {
+  min-height: var(--spacing-88);
+}
+.l-articleList__tag {
+  min-height: var(--spacing-32);
+}
+.l-articleList .c-articleCard__postThumbnail {
+  padding: 0;
+}
+.l-articleList .c-articleCard__postThumbnail__postPhoto {
+  border-radius: var(--spacing-24);
+}
+
+.l-qnaIndex .c-qnaCard {
+  transform: none;
+}
+.l-qnaIndex .c-articleCard__content, .l-qnaIndex .o-readMore {
+  font-size: var(--text-sm);
+}
+
 .c-breadcrumbs {
   display: flex;
   flex-direction: column;
   align-items: start;
   padding: 0 var(--spacing-24);
 }
-.c-breadcrumbs_prePage {
+.c-breadcrumbs__prePage {
   margin: var(--spacing-12);
   color: var(--color-black);
   font-size: var(--text-2xl);
 }
-.c-breadcrumbs_currentPage {
+.c-breadcrumbs__currentPage {
   color: #4C2A70;
   font-size: var(--text-4xl);
   letter-spacing: var(--spacing-4);
@@ -2779,6 +2855,7 @@ section {
   max-width: 30rem;
   max-height: 40rem;
   aspect-ratio: 3/4;
+  cursor: pointer;
   border: solid var(--spacing-4) #4C2A70;
   border-radius: var(--spacing-24) var(--spacing-24) 0 0;
   padding: 0;
@@ -2828,7 +2905,7 @@ section {
   grid-row: 16/21;
   padding: var(--spacing-4);
   color: var(--color-white);
-  font-size: var(--text-xl);
+  font-size: var(--text-md);
   align-self: center;
 }
 .c-studentCard_schoolChinese {
@@ -2836,7 +2913,7 @@ section {
   grid-row: 1/3;
   text-align: end;
   align-self: end;
-  font-size: var(--text-lg);
+  font-size: var(--text-md);
   padding: var(--spacing-8);
 }
 .c-studentCard_react {
@@ -2877,6 +2954,7 @@ section {
 
 .c-studentCardSwiper {
   aspect-ratio: 3/4;
+  cursor: pointer;
   border: solid var(--spacing-2) #4C2A70;
   border-radius: var(--spacing-24) var(--spacing-24) 0 0;
   padding: 0;
@@ -2974,6 +3052,7 @@ section {
 }
 
 .c-uniCard {
+  cursor: pointer;
   border: solid var(--spacing-2) #4C2A70;
   border-radius: var(--spacing-24);
   background-color: var(--color-white);
@@ -3336,6 +3415,7 @@ section {
   text-align: end;
   font-size: var(--text-lg);
   color: #4C2A70;
+  z-index: 5;
 }
 
 .o-react {
@@ -3366,7 +3446,7 @@ section {
   all: unset;
   cursor: pointer;
   display: block;
-  width: var(--spacing-80);
+  width: var(--spacing-120);
   aspect-ratio: 1/1;
 }
 
@@ -3465,6 +3545,16 @@ section {
   color: #4C2A70;
 }
 
+.o-whiteTitle {
+  font-size: var(--text-3xl);
+  color: var(--color-white);
+}
+
+.o-smallWhiteTitle {
+  font-size: var(--text-xl);
+  color: var(--color-white);
+}
+
 .o-articleTitle {
   font-size: var(--text-2xl);
   color: #4C2A70;
@@ -3499,6 +3589,7 @@ section {
   width: 2rem;
   height: 1.1rem;
   border-radius: var(--spacing-12);
+  z-index: 99;
 }
 .s-swiperCustom span.swiper-pagination-bullet {
   background-color: #4C2A70;
@@ -3512,7 +3603,11 @@ section {
   position: absolute;
   text-align: center;
   transform: translate3d(0, 0, 0);
-  z-index: 10;
+  z-index: 1;
+}
+.s-swiperCustom .paginationCustom .o-readMore {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .s-bannerSwiperCustom span.swiper-pagination-bullet, .s-bannerSwiperCustom span.swiper-pagination-bullet-active {
