--- a/public/scss/object/searchBar.scss
+++ b/public/scss/object/searchBar.scss
@@ -13,6 +13,7 @@
         }
     }
     &__input{
+        padding-left: var(--spacing-24);
         width: 100%;
         height: 100%;
         border: solid var(--spacing-4) $prime_purple;
